--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,19 @@
 
-#header {background-color: #OOFFFF
-     color:white;
-     text-align: center;
-    } 
 body {
-  background-color: black; 
+  background-color: #8c7373; 
   font-size: 20px;
   font-family: 'Times New Roman';
   
 }   
+
+image{
+  background-color: #ffebee red lighten-5;
+}
+
 #blog.html {
   background-color: blue;
 }
+
 
 li {
     display: inline;
@@ -24,23 +26,20 @@ li {
 a {
     display: block;
     padding: 8px;
-    background-color: #dddddd;
+
 }
 
 #container 
-    {background-color: #7FFFOO;
+    {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
     }
-h1,h2,h3,h4,h5{color:crimson; font-size: 20px;}
+h1,h2,h3,h4,h5{ font-size: 40px;}
 
-h1 {background-color: orange;}
 
-<h1 style="color:blue"></h1>
 
 p > a {
-  color: red;
   font size: 20px;
   font-weight: italic;
 }
