--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,38 @@
 
 body {
-  background-color: #8c7373; 
+  background-color: #936c6c; 
   font-size: 20px;
   font-family: 'Times New Roman';
-  
-}   
-
-image{
-  background-color: #ffebee red lighten-5;
+  color: #936c6c
+  body {
+    background-image: url("https://www.facebook.com/photo.php?fbid=10206961213370551&l=fd0a34ea62"); 
+ 
+}  
+.carouselbox {
+  font-family: helvetica,sans-serif;
+  font-size: 14px;
+  width: 100px;
+  position: relative;
+  margin: 1em;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 10px #ccc;
+  overflow: hidden;
+}
+.content {
+  margin: 0;
+  padding: 0;
+}
+.content li {
+  font-size: 100px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  text-align: center;
 }
 
 #blog.html {
-  background-color: blue;
+  background-color: #936c6c;
 }
 
 
