--- a/views/blog.html
+++ b/views/blog.html
@@ -4,111 +4,212 @@
   
   <title> Maria's Blog</title>
 
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link href=link href='https://fonts.googleapis.com/"css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="views/css" href="blog.css">  
+
+ 
 
 </head>
 <body>
 <!--beginning of NavBar-->
+<!--beginning of NavBar-->
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Welcome to Maria's Portfolio!</a>
+      <a href="#" class="brand-logo">Maria's Blog!</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-primary btn-lg active">
-              <li><a href="home.html">home</a>
-              </li> 
-            </button>
-              </li>
-              <li><button type="button" class="btn btn-primary btn-lg">
-              <li><a href="home.html"></a>home</li> </button></a></li>
-              <li><button type="button" class="btn btn-primary btn-lg">
-              <li><a href="blog.html"></a>blog</li> </button></a></li>
+               <li><button type="button" class="btn btn-default btn-lg">
+              <li class="active"><a href="home.html">Home</a></li> </button>
               <li><button type="button" class="btn btn-default btn-lg">
               <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
           </div>
         </ul>
   </div>
-</nav>      
+</nav>  
+   
+<!-- my picture set up -->
+    <div id="image">
+      <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAATDAAAAJDU3ZWJiMWNhLWMyNTQtNGRiOC1iMTZmLTdmOGE0NmExNzc4OQ.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<div id="sidebar1">
+    <div class="wrapper">
+      <div class="main"> 
+        <!-- page 1-->
+        <section id="page1">
+          <div class="overlay"></div>
+          <div class="content">
+            <div class="container clearfix">
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2 col-sm-12">
+                  <p class="italic">Hi there, my name is Maria!</p>
+                  <h1>Blog</h1>
+                  <p class="italic">My blog will provide you with an idea of who I am.</p>
+                  <p class="italic">I am web developer in the making. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="icon faa-float animated"><i class="fa fa-angle-double-down"></i></div>
+        </section>
+    <div id="smiley">
+        <div id="star">
+        <img src="pics/cuy.jpg" ></div>
+            <img src="pics/cuy.jpg" height="800" width="800">
+        </div>
+    </div>
 
+        <div class="row">
+            <div class="col-sm-4">
+              <h1>Education</h1>
+                  <p class="hid" id= "paragraphOne">I I attended the City College of New York my freshman year. I transferred to Montclair State University my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at Hudson County Community College. Last semester, Spring 2015, I took two MBA classes at Montclair State University. </p>
+                <p><img class="hid" id="imageTwo" src="https://i.ytimg.com/vi/ukfOjjo9zXE/maxresdefault.jpg" height="200" width="300"></p>
+            </div>
+          <div class="col-sm-4">
+
+<p><img class="hid" id="imageThree" src="http://www.scitexas.edu/wp-content/uploads/2015/08/medical-billing-and-coding-schools-in-san-antonio.jpg" height="200" width="300">
+<h1>Career Objective</h1>
+                <p class="hid" id= "paragraphTwo">To utilize my soon to be coding skills in my career and to help people along the way.
+</p></p>
+
+          </div>
+        <div class="row">
+            <div class="col-sm-4">
+            <h1>Experience</h1> 
+    
+                <p><img class="hid" id="imageOne" src="pics/trees.jpg" height="200" width="300">I interned at Carga Express Corp. the summer before senior year of ctual Financial Group. At the moment, I am still working there as a Financial Adviser. </p>
+          </div>
+        </div>
+    </div>
+ 
+
+   
+    <div>
+      <ul>
+      <h1>Accomplishements</h1>
+      <ul>
+        Dean's List |
+        Recipient of J.S. Gang Scholarship |
+        Member of NJ Collegiate Business Administration Honor Society
+      </ul>
+    </div>
+
+    <div>
+      <h1>Skills</h1>
+      <ul>
+        Microsoft Excel | Word | Access | Outlook | Powerpoint |
+        Quickbooks ||
+        Fluent in Spanish |
+        Can do a Roundhouse kick :P
+      </ul>ollege. My senior year, I worked at Sylvan Learning Center, I was a teacher’s assistant the first month. I was then promoted, and became a Tutor in Math, English and Writing for grades 1-12th. After graduation, I managed my families business, Rocio’s Restaurant. At the moment, I also help out with some of the administrative work. In the beginning of last year, I started working ar Carga Express Corp. as a Junior Accountant. While I worked there, I attended MSU for the MBA, and was recruited by MassMu
+
+
+    </div>
+
+    <div>
+      <h1>Hobbies</h1>
+      <ul>
+        Biking |
+        Hiking | 
+        Traveling  |
+        Reading  |
+        Piano enthusiast  |
+      </ul>
+    </div>
+
+        <section id="page6">
+          <div class="content">
+            <div class="container clearfix">
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="heading">Contact</h2>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <form id="contact-form" method="post" action="contact.php" class="contact-form">
+                        <div class="controls">
+                          <div class="row">
+                            <div class="col-sm-6">
+                              <div class="form-group">
+                                <label for="name">Your firstname *</label>
+                                <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
+                              </div>
+                            </div>
+                            <div class="col-sm-6">
+                              <div class="form-group">
+                                <label for="surname">Your lastname *</label>
+                                <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="surname">Your email *</label>
+                            <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
+                          </div>
+                          <div class="form-group">
+                            <label for="surname">Your message for us *</label>
+                            <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
+                          </div>
+                          <div class="text-center">
+                            <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  <div class="row copyright">
+                    <div class="col-md-6">
+                      <p>&copy;2015 Your name/company goes here</p>
+                    </div>
+                    <div class="col-md-6">
+                      <p class="credit">Template by <a href="http://www.bootstrapious.com">Bootstrapious &mdash; Bootstrap Templates</a></p>
+                      <!-- Please do not remove the backlink to us. It is part of the licence conditions. Thanks for understanding :)
+                      -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+
+          <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">https://www.linkedin.com/in/mariavintimilla</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"> https://twitter.com/LeSweetTart</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">https://github.com/Swe3tTart</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">stackoverflow.com/users/5510689/mariav</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
   <img src="https://www.facebook.com/photo.php?fbid=10207545181969401&=4b872fdf5d">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic' rel='stylesheet' type='text/css'>
   
-  <h1>Education</h1>
-    I attended the City College of New York my freshman year. I transferred to Montclair State University my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at Hudson County Community College. Last semester, Spring 2015, I took two MBA classes at Montclair State University.
-
-  <div><p>
-    <h2>Career Objective</h2>
-    To utilize my soon to be coding skills in my career and to help people along the way.
-
-    
-    <h2>Experience</h2>
-    <p>
-      I interned at Carga Express Corp. the summer before senior year of college. My senior year, I worked at Sylvan Learning Center, I was a teacher’s assistant the first month. I was then promoted, and became a Tutor in Math, English and Writing for grades 1-12th. After graduation, I managed my families business, Rocio’s Restaurant. At the moment, I also help out with some of the administrative work. In the beginning of last year, I started working ar Carga Express Corp. as a Junior Accountant. While I worked there, I attended MSU for the MBA, and was recruited by MassMutual Financial Group. At the moment, I am still working there as a Financial Adviser. 
-    </p>
-
-    
-    </div>
-    
-    <p>
-    
-    <div>
-    <h2>My Blog</h2>
-    <a href="/blog.html">Click Here To Read My Blog</a>.
-
-    <ul>
-      <h3>Accomplishements</h3>
-      <li>
-        Dean's List
-        Recipient of J.S. Gang Scholarship
-        Member of NJ Collegiate Business Administration Honor Society
-      </li>
-    </div>
-
-    <div>
-      <h4>Skills</h4>
-      <li>
-        Microsoft Excel, Word, Access, Outlook and Powerpoint
-        Quickbooks
-        Fluent in Spanish
-        Can do a Roundhouse kick :P
-      </li>
-
-      <li>
-        https://www.linkedin.com/in/mariavintimilla
-        https://twitter.com/LeSweetTart
-        https://github.com/Swe3tTart
-        stackoverflow.com/users/5510689/mariav
-      </li>
-    </div>
-
-    <div>
-      <h5>Hobbies</h5>
-      <li>
-        Biking
-        Hiking
-        Traveling
-        Reading
-        Piano enthusiast
-      </li>
-    </ul>
-    </div>
-
-<form>
-  First name:<br>
-  <input type="text" name="firstname">
-  </br>
-  Last name:<br>
-  <input type="text" name="lastname">
-  </br>
-  Email:<br>
-  <input type="text" email="email">
-  </br>
-</form>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="portfolio.js"></script>
-</body>
-</html>
-Status API Training Shop Blog About Pricing
+  
