--- a/views/home.html
+++ b/views/home.html
@@ -16,201 +16,61 @@
 </head>
 <body>
 
+<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+        <li data-target="#carousel" data-slide-to="3"></li>
+         <li data-target="#carousel" data-slide-to="4"></li>
+        <li data-target="#carousel" data-slide-to="5"></li>
+
+    </ol>
+    <!-- Carousel items -->
+
+   
+    <div class="carousel-inner">
+        <div class="active item">
+         <img src="pics/adventure.jpg" alt="..." class="rutpix" height="1100" width="1300"></div>
+        <div class="active item">
+         <img src="pics/chico.jpg" alt="..." class="rutpix" height="300" width="1300"></div>
+         <div class="active item">
+         <img src="pics/nonprofit1.jpg" alt="..." class="rutpix" height="1100" width="1300"></div>
+        <div class="item">
+          <img src="pics/nonprofit2.jpg" alt="..." class="rutpix" height="1000" width="1300"></div>
+        <div class="item">
+          <img src="pics/nonprofit5.jpg" alt="..." class="rutpix" width="1300">
+        </div>
+        <div class="item">
+          <img src="pics/bm2.jpg" alt="..." class="rutpix" height="1300" width="4000">
+        </div>
+
+    </div>
+    <!-- Carousel nav -->
+    <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
+</div>
 
 
 <!--beginning of NavBar-->
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Welcome to Maria's Portfolio!</a>
+      <a href="#" class="brand-logo">Maria's Portfolio!</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-primary btn-lg active">
-              <li><a href="home.html">home</a>
-              </li> 
-            </button>
-              </li>
-              <li><button type="button" class="btn btn-primary btn-lg">
-              <li><a href="blog.html"></a>blog</li> </button></a></li>
+               <li><button type="button" class="btn btn-default btn-lg">
+              <li class="active"><a href="blog.html">My Blog</a></li> </button>
               <li><button type="button" class="btn btn-default btn-lg">
               <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
           </div>
         </ul>
   </div>
-</nav>      
+</nav>  
 
-<!-- my picture set up -->
-    <div id="image">
-      <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel grey lighten-5 z-depth-1">
-          <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAATDAAAAJDU3ZWJiMWNhLWMyNTQtNGRiOC1iMTZmLTdmOGE0NmExNzc4OQ.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s10">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-<div id="sidebar1">
-     <h1>About Me</h1>
-   
-  </div>  <div>
-<p>I was born in Ecuador.</p>
-  </div>
-
-      <!--Carousel begins--> 
-    <div class="container">
-      <div class="col-sm=12">
-        <div class="bs-example">    
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              </ol>
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                  <img src="http://1x2fx81ukj80cz7043sc901i.wpengine.netdna-cdn.com/wp-content/uploads/2013/08/Hiking-Trail.jpg" alt="..." class="rutpix">
-                  <div class="carousel-caption">
-                    <h3>Hiking</h3>
-                    <p>Nature gives me clarity</p>
-                  </div>
-                </div>
-                <div class="item">
-                  <img src="http://images.scienceworldreport.com/data/images/full/4236/toy-poodles.jpg" alt="..." class="rutpix">
-                  <div class="carousel-caption">
-                    <h3>Poodles</h3>
-                    <p>Toy Poodles</p>
-                  </div>
-                </div>
-                <div class="item">
-                  <img src="http://static.frontinc.com/uploads/2014/03/Rutgers_04_1200x800.jpg" alt="..." class="rutpix">
-                  <div class="carousel-caption">
-                    <h3>Where the Magic Happens</h3>
-                    <p>Rutger's School of Business</p>
-                  </div>
-                </div>  
-              </div>
-              <!--end wrapper for slides-->
-              <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-          </div>
-        </div> 
-      </div>
-    </div>
-    <br />
-    <br />
-    <br />
-    <br />
-
-
-        <div class="row">
-            <div class="col-sm-4">
-              <h3>Eduction</h3>
-                  <p class="hid" id= "paragraphOne">I attended the City College of New York my freshman year. I transferred to Montclair State University my sophomore year and majored in Economics and Jurisprudence. </p>
-                <p><img class="hid" id="imageTwo" src="https://i.ytimg.com/vi/ukfOjjo9zXE/maxresdefault.jpg" height="200" width="300"></p>
-            </div>
-          <div class="col-sm-4">
-            <h3>Career Objective</h3>
-
-                <p class="hid" id= "paragraphTwo">To utilize my soon to be coding skills in my career and to help people along the way.
-</p> <p><img class="hid" id="imageThree" src="http://www.scitexas.edu/wp-content/uploads/2015/08/medical-billing-and-coding-schools-in-san-antonio.jpg" height="200" width="300"></p>
-
-          </div>
-          <div class="col-sm-4">
-            <h3>Skills</h3> 
     
-                <p><img class="hid" id="imageOne" src="http://www.marianelaradio.com/wp-content/uploads/2014/01/azogues1.jpg" height="200" width="300"></p>
-          </div>
-        </div>
-    </div>
- 
-
-   
-    <div>
-      <ul>
-      <h3>Accomplishements</h3>
-      <ul>
-        Dean's List |
-        Recipient of J.S. Gang Scholarship |
-        Member of NJ Collegiate Business Administration Honor Society
-      </ul>
-    </div>
-
-    <div>
-      <h4>Skills</h4>
-      <ul>
-        Microsoft Excel | Word | Access | Outlook | Powerpoint |
-        Quickbooks ||
-        Fluent in Spanish |
-        Can do a Roundhouse kick :P
-      </ul>
+<marquee behavior="scroll" direction="left">Hey there! Welcome to Maria's Portfolio! :-)</marquee>
 
 
-    </div>
-
-    <div>
-      <h5>Hobbies</h5>
-      <ul>
-        Biking |
-        Hiking | 
-        Traveling  |
-        Reading  |
-        Piano enthusiast  |
-      </ul>
-    </div>
-
-<form>
-  First name:<br>
-  <input type="text" name="firstname">
-  </br>
-  Last name:<br>
-  <input type="text" name="lastname">
-  </br>
-  Email:<br>
-  <input type="text" email="email">
-  </br>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">here</i>
-  </button>
-</form>
-
-
-          <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">https://www.linkedin.com/in/mariavintimilla</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"> https://twitter.com/LeSweetTart</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">https://github.com/Swe3tTart</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">stackoverflow.com/users/5510689/mariav</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
-        </footer>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
