edited homhome pg, repos and blog

--- a/views/blog.html
+++ b/views/blog.html
@@ -12,21 +12,12 @@
 
 </head>
 <body>
-<!--beginning of NavBar-->
-<!--beginning of NavBar-->
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Maria's Blog!</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <div class="btn-group" role="group" aria-label="...">
-               <li><button type="button" class="btn btn-default btn-lg">
+    <button type="button" class="btn btn-default btn-lg">
               <li class="active"><a href="home.html">Home</a></li> </button>
-              <li><button type="button" class="btn btn-default btn-lg">
+    <button type="button" class="btn btn-default btn-lg">
               <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
           </div>
-        </ul>
-  </div>
-</nav>  
+
    
 <!-- my picture set up -->
     <div id="image">
@@ -46,7 +37,7 @@
     <div class="wrapper">
       <div class="main"> 
         <!-- page 1-->
-        <section id="page1">
+        <section id="blog">
           <div class="overlay"></div>
           <div class="content">
             <div class="container clearfix">
@@ -54,8 +45,7 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                   <p class="italic">Hi there, my name is Maria!</p>
                   <h1>Blog</h1>
-                  <p class="italic">My blog will provide you with an idea of who I am.</p>
-                  <p class="italic">I am web developer in the making. </p>
+                  <p class="italic">    </ul> I was born in Ecuador and moved to the U.S. at age 7. I assimilated to the culture quickly, and felt right at home knowing that many of my peers were in a similar situation; I've always been intrigued by the melting pot that is America. I enjoy learning about different cultures, and would ideally enjoy a job that involves coding and interacting with people. </p>
                 </div>
               </div>
             </div>
@@ -72,14 +62,14 @@
         <div class="row">
             <div class="col-sm-4">
               <h1>Education</h1>
-                  <p class="hid" id= "paragraphOne">I I attended the City College of New York my freshman year. I transferred to Montclair State University my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at Hudson County Community College. Last semester, Spring 2015, I took two MBA classes at Montclair State University. </p>
+                  <p class="hid" id= "paragraphOne">I I attended the City College of New York my freshman year. I transferred to MSU my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at HCCC. Last semester, Spring 2015, I took two MBA classes at Montclair State University. </p>
                 <p><img class="hid" id="imageTwo" src="https://i.ytimg.com/vi/ukfOjjo9zXE/maxresdefault.jpg" height="200" width="300"></p>
             </div>
           <div class="col-sm-4">
 
 <p><img class="hid" id="imageThree" src="http://www.scitexas.edu/wp-content/uploads/2015/08/medical-billing-and-coding-schools-in-san-antonio.jpg" height="200" width="300">
 <h1>Career Objective</h1>
-                <p class="hid" id= "paragraphTwo">To utilize my soon to be coding skills in my career and to help people along the way.
+                <p class="hid" id= "paragraphTwo">To utilize my coding skills to help people. I enjoy front-end development.
 </p></p>
 
           </div>
@@ -110,10 +100,7 @@
         Microsoft Excel | Word | Access | Outlook | Powerpoint |
         Quickbooks ||
         Fluent in Spanish |
-        Can do a Roundhouse kick :P
-      </ul>ollege. My senior year, I worked at Sylvan Learning Center, I was a teacher’s assistant the first month. I was then promoted, and became a Tutor in Math, English and Writing for grades 1-12th. After graduation, I managed my families business, Rocio’s Restaurant. At the moment, I also help out with some of the administrative work. In the beginning of last year, I started working ar Carga Express Corp. as a Junior Accountant. While I worked there, I attended MSU for the MBA, and was recruited by MassMu
-
-
+        Can do a Roundhouse kick :D
     </div>
 
     <div>
@@ -127,87 +114,9 @@
       </ul>
     </div>
 
-        <section id="page6">
-          <div class="content">
-            <div class="container clearfix">
-              <div class="row">
-                <div class="col-md-12">
-                  <h2 class="heading">Contact</h2>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <form id="contact-form" method="post" action="contact.php" class="contact-form">
-                        <div class="controls">
-                          <div class="row">
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="name">Your firstname *</label>
-                                <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
-                              </div>
-                            </div>
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="surname">Your lastname *</label>
-                                <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your email *</label>
-                            <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your message for us *</label>
-                            <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                          </div>
-                          <div class="text-center">
-                            <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  <div class="row copyright">
-                    <div class="col-md-6">
-                      <p>&copy;2015 Your name/company goes here</p>
-                    </div>
-                    <div class="col-md-6">
-                      <p class="credit">Template by <a href="http://www.bootstrapious.com">Bootstrapious &mdash; Bootstrap Templates</a></p>
-                      <!-- Please do not remove the backlink to us. It is part of the licence conditions. Thanks for understanding :)
-                      -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-    </div>
 
-          <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">https://www.linkedin.com/in/mariavintimilla</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!"> https://twitter.com/LeSweetTart</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">https://github.com/Swe3tTart</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">stackoverflow.com/users/5510689/mariav</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
-        </footer>
+
+    
   <img src="https://www.facebook.com/photo.php?fbid=10207545181969401&=4b872fdf5d">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic' rel='stylesheet' type='text/css'>
