--- a/views/repos.html
+++ b/views/repos.html
@@ -5,47 +5,85 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ultra">
   <link rel="stylesheet" type="text/css" href="repos.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </head>
 <body>
-<!--beginning of NavBar-->
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Welcome to Maria's Portfolio!</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-primary btn-lg active">
-              <li><a href="home.html">home</a>
-              </li> 
-            </button>
-              </li>
-              <li><button type="button" class="btn btn-primary btn-lg">
-              <li><a href="blog.html"></a>blog</li> </button></a></li>
-              <li><button type="button" class="btn btn-default btn-lg">
-              <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
-          </div>
-        </ul>
-  </div>
 
     <ul>
-      <li><a href="home.html">Home</a>
-      <li><a href="blog.html">Home</a>
-   </ul>
+      <button><li><a href="home.html">Home</a></li>
+      <button><li><a href="blog.html">Blog</a>
+      </ul></body>
 
-  <article class="blog">
-    <p>Welcome!</p>
-  </article>
+<marquee behavior="scroll" direction="left" id="welcome">Hey there! Welcome to Maria's Repos, GitHub and Social Profile! :-)</marquee>
+<div class="active item">
+         <img src="pictures/github_octocat.jpg" alt="..." class="rutpix" height="300" width="500"></div>
 
-    <h2>My Repos/Git</h2>
+    <h2 id="h2">My Repos/Git</h2>
     <p>
     <ul>
-      <li><a href="https://protected-thicket-9025.herokuapp.com/">https://protected-thicket-9025.herokuapp.com/"</a></li>
-      <li><a href="https://salty-savannah-6762.herokuapp.com/">https://salty-savannah-6762.herokuapp.com/</a></li>
-      <li><a href="https://warm-bayou-6696.herokuapp.com/">https://warm-bayou-6696.herokuapp.com/</a></li>
-       <li><a href="https://github.com/mariav">https://github.com/mariav</a></li>
-        <li><a href="https://github.com/MariaVintimilla/TODOproject">https://github.com/MariaVintimilla/TODOproject</a></li>
+      <li><a id="links" href="https://protected-thicket-9025.herokuapp.com/">https://protected-thicket-9025.herokuapp.com/"</a></li>
+      <li><a id="links" href="https://salty-savannah-6762.herokuapp.com/">https://salty-savannah-6762.herokuapp.com/</a></li>
+      <li><a id="links" href="https://warm-bayou-6696.herokuapp.com/">https://warm-bayou-6696.herokuapp.com/</a></li>
+       <li><a id"links" href="https://github.com/MariaV27">https://github.com/MariaV27</a></li>
+        <li><a id="links" href="https://linkedin.com/in/mariavintimilla">https://linkedin.com/in/mariavintimilla</a></li>
     </ul>
     </p>
-
+        <section id="page6">
+          <div class="content">
+            <div class="container clearfix">
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="heading">Contact</h2>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <form id="contact-form" method="post" action="contact.php" class="contact-form">
+                        <div class="controls">
+                          <div class="row">
+                            <div class="col-sm-6">
+                              <div class="form-group">
+                                <label for="name">Your firstname *</label>
+                                <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
+                              </div>
+                            </div>
+                            <div class="col-sm-6">
+                              <div class="form-group">
+                                <label for="surname">Your lastname *</label>
+                                <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="surname">Your email *</label>
+                            <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
+                          </div>
+                          <div class="form-group">
+                            <label for="surname">Your message for us *</label>
+                            <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
+                          </div>
+                          <div class="text-center">
+                            <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  <div class="row copyright">
+                    <div class="col-md-6">
+                      <p>&copy;2015 Your name/company goes here</p>
+                    </div>
+                    <div class="col-md-6">
+                      <p class="credit">Template by <a href="http://www.bootstrapious.com">Bootstrapious &mdash; Bootstrap Templates</a></p>
+                      <!-- Please do not remove the backlink to us. It is part of the licence conditions. Thanks for understanding :)
+                      -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="scripts/portfolio.js"></script>
