--- a/views/blog.html
+++ b/views/blog.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="views/css" href="blog.css">  
+        <link rel="stylesheet" type="text/css" href="blog.css">  
 
  
 
@@ -15,24 +15,23 @@
     <button type="button" class="btn btn-default btn-lg">
               <li class="active"><a href="home.html">Home</a></li> </button>
     <button type="button" class="btn btn-default btn-lg">
-              <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
-          </div>
+              <li class="active"><a href="repos.html">My Repos/Git</a></li> 
+    </button>
 
    
+
 <!-- my picture set up -->
-    <div id="image">
-      <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel grey lighten-5 z-depth-1">
-          <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAATDAAAAJDU3ZWJiMWNhLWMyNTQtNGRiOC1iMTZmLTdmOGE0NmExNzc4OQ.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s10">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<img id="myImg" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAATDAAAAJDU3ZWJiMWNhLWMyNTQtNGRiOC1iMTZmLTdmOGE0NmExNzc4OQ.jpg" alt="Trolltunga, Norway" width="200" height="200">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+
+
 <div id="sidebar1">
     <div class="wrapper">
       <div class="main"> 
@@ -45,39 +44,54 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                   <p class="italic">Hi there, my name is Maria!</p>
                   <h1>Blog</h1>
-                  <p class="italic">    </ul> I was born in Ecuador and moved to the U.S. at age 7. I assimilated to the culture quickly, and felt right at home knowing that many of my peers were in a similar situation; I've always been intrigued by the melting pot that is America. I enjoy learning about different cultures, and would ideally enjoy a job that involves coding and interacting with people. </p>
+                  <p class="italic">    </ul> I was born in Ecuador and moved to the U.S. at age 7. I assimilated to the culture quickly, and felt right at home knowing that many of my peers were in a similar situation.
+
+                 I've always been intrigued by the melting pot that is America. I enjoy learning about different cultures, and would ideally enjoy a job that involves coding and interacting with people. </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="icon faa-float animated"><i class="fa fa-angle-double-down"></i></div>
-        </section>
-    <div id="smiley">
-        <div id="star">
-        <img src="pics/cuy.jpg" ></div>
-            <img src="pics/cuy.jpg" height="800" width="800">
-        </div>
-    </div>
+      <section>
 
         <div class="row">
             <div class="col-sm-4">
               <h1>Education</h1>
-                  <p class="hid" id= "paragraphOne">I I attended the City College of New York my freshman year. I transferred to MSU my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at HCCC. Last semester, Spring 2015, I took two MBA classes at Montclair State University. </p>
-                <p><img class="hid" id="imageTwo" src="https://i.ytimg.com/vi/ukfOjjo9zXE/maxresdefault.jpg" height="200" width="300"></p>
-            </div>
-          <div class="col-sm-4">
+                  <p class="hid" id= "paragraphOne">I  attended the City College of New York my freshman year. I transferred to MSU my sophomore year and majored in Economics and Jurisprudence. After graduation, I took Principles of Accounting, Computerized Accounting and Calculus II at HCCC. Last semester, Spring 2015, I took two MBA classes at Montclair State University. </p>
+                <p>
 
-<p><img class="hid" id="imageThree" src="http://www.scitexas.edu/wp-content/uploads/2015/08/medical-billing-and-coding-schools-in-san-antonio.jpg" height="200" width="300">
+
+
+<img class="hid" id="imageTwo" src="https://i.ytimg.com/vi/ukfOjjo9zXE/maxresdefault.jpg" height="200" width="300"></p>
+            </div>
+          
+
+<div class="col-sm-4">
+<p><!-- my picture set up -->
+<img id="myImg" src="http://www.scitexas.edu/wp-content/uploads/2015/08/medical-billing-and-coding-schools-in-san-antonio.jpg" alt="Trolltunga, Norway" width="200" height="200">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
 <h1>Career Objective</h1>
                 <p class="hid" id= "paragraphTwo">To utilize my coding skills to help people. I enjoy front-end development.
-</p></p>
+</p>
 
           </div>
         <div class="row">
             <div class="col-sm-4">
             <h1>Experience</h1> 
-    
-                <p><img class="hid" id="imageOne" src="pics/trees.jpg" height="200" width="300">I interned at Carga Express Corp. the summer before senior year of ctual Financial Group. At the moment, I am still working there as a Financial Adviser. </p>
+<p><!-- my picture set up -->
+<img id="myImg" src="pics/trees.jpg" alt="Trolltunga, Norway" width="200" height="200">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>I interned at Carga Express Corp. the summer before senior year of ctual Financial Group. At the moment, I am still working there as a Financial Adviser. </p>
           </div>
         </div>
     </div>
