--- a/views/repos.html
+++ b/views/repos.html
@@ -17,7 +17,7 @@
 
 <marquee behavior="scroll" direction="left" id="welcome">Hey there! Welcome to Maria's Repos, GitHub and Social Profile! :-)</marquee>
 <div class="active item">
-         <img src="pictures/github_octocat.jpg" alt="..." class="rutpix" height="300" width="500"></div>
+         <img src="pics/github.jpg" alt="..." class="rutpix" height="300" width="500"></div>
 
     <h2 id="h2">My Repos/Git</h2>
     <p>
@@ -69,12 +69,9 @@
                     </div>
                   <div class="row copyright">
                     <div class="col-md-6">
-                      <p>&copy;2015 Your name/company goes here</p>
                     </div>
                     <div class="col-md-6">
                       <p class="credit">Template by <a href="http://www.bootstrapious.com">Bootstrapious &mdash; Bootstrap Templates</a></p>
-                      <!-- Please do not remove the backlink to us. It is part of the licence conditions. Thanks for understanding :)
-                      -->
                     </div>
                   </div>
                 </div>
